refactor(mybatis): 优化参数校验错误处理
- 修改了多个方法中获取校验错误信息的方式
- 使用 getFirst()替代 get(0) 获取第一个错误信息
- 新增 ArtemisConfig 类用于配置 artemis相关参数